Fix typos in first ionic port

--- a/appIonic/www/templates/signin.html
+++ b/appIonic/www/templates/signin.html
@@ -1,4 +1,4 @@
-ion-modal-view>
+<ion-modal-view>
   <ion-header-bar>
     <h1 class="title">Login</h1>
   </ion-header-bar>
@@ -26,5 +26,6 @@ ion-modal-view>
         </label>
       </div>
     </form>
+    <a id="newAuth" href="#/signup">Don't have an account? <strong>Sign-up</strong> ...</a>
   </ion-content>
 </ion-modal-view>
