adds hypothetical menu

--- a/appIonic/www/templates/signin.html
+++ b/appIonic/www/templates/signin.html
@@ -26,6 +26,6 @@
         </label>
       </div>
     </form>
-    <a id="newAuth" href="#/signup">Don't have an account? <strong>Sign-up</strong> ...</a>
+    <a id="newAuth" href="#/signup">Don't have an account? <strong>Sign-Up</strong> ...</a>
   </ion-content>
 </ion-modal-view>
