--- a/appIonic/www/templates/signup.html
+++ b/appIonic/www/templates/signup.html
@@ -1,4 +1,4 @@
-<ion-modal-view>
+<ion-view>
   <ion-header-bar>
     <h1 class="title">Sign Up</h1>
   </ion-header-bar>
@@ -11,7 +11,7 @@
         </label>        
         <div ng-messages="loginForm.username.$error" ng-messages-include="templates/error-messages.html" 
         class="form-errors" ng-if="loginForm.username.$touched">
-          <div class="form-error" ng-message="required">Please enter your Username</div>
+          <!-- <div class="form-error" ng-message="required">Please enter your Username</div> -->
         </div>
         <label class="item item-input">
           <span class="input-label">Password</span>
@@ -19,13 +19,13 @@
         </label>
         <div ng-messages="loginForm.password.$error" ng-messages-include="templates/error-messages.html" 
         class="form-errors" ng-if="loginForm.username.$touched">
-          <div class="form-error" ng-message="required">Please enter your Password</div>
+          <!-- <div class="form-error" ng-message="required">Please enter your Password</div> -->
         </div>
         <label class="item">
-          <button class="button button-block button-positive" type="submit" ng-disabled="loginForm.$invalid">Sign up</button>
+          <button class="button button-block button-positive" type="submit">Sign up</button>
         </label>
       </div>
     </form>
     <a id="newAuth" href="#/signin">Already have an account? <strong>Sign-in</strong> ...</a>
   </ion-content>
-</ion-modal-view>
+</ion-view>
