change styling and debugging

--- a/appIonic/www/templates/newevent.html
+++ b/appIonic/www/templates/newevent.html
@@ -44,7 +44,7 @@
         </label>
         <label class="item item-input">
           <span class="input-label">Postal Codes</span>
-          <input type="number" ng-model="user.postalCode">
+          <input type="text" ng-model="user.postalCode">
         </label>
       </div>
       <label class="item">
