--- a/appIonic/www/templates/accounts.html
+++ b/appIonic/www/templates/accounts.html
@@ -1,9 +1,12 @@
 <ion-view view-title="Accounts">
   <ion-content>
-    <section class="venmo-button">
-      <button ng-show="!shouldNotBeClickable" ng-disabled="true">Venmo Account Authorized</button>
-      <button ng-show="shouldNotBeClickable" ng-click="authorize()">Authorize Your Venmo Account!</button>
-    </section>
+    <!-- <section class="venmo-button"> -->
+    <label class="item">
+      
+      <button class="button button-block button-positive" ng-show="!shouldNotBeClickable" ng-disabled="true">Venmo Account Authorized</button>
+      <button class="button button-block button-positive" ng-show="shouldNotBeClickable" ng-click="authorize()">Authorize Your Venmo Account!</button>
+    </label>
+    <!-- </section> -->
     <form ng-submit="accountUpdate()">
       <div class="list">
         <label class="item item-input">
@@ -19,11 +22,11 @@
           <input type="text" ng-model="lastname">
         </label>
         <label class="item item-input">
-          <span class="input item-input">Phone Number</span>
+          <span class="input-label">Phone Number</span>
           <input ng-model="telephone" type="tel" pattern="[\+]\d{2}[\(]\d{2}[\)]\d{4}[\-]\d{4}">
         </label>
         <label class="item item-input">
-          <span class="input item-input">Email (required)</span>
+          <span class="input-label">Email (required)</span>
            <input ng-model="email" type="email" ng-required="true">
         </label>
         <label class="item">
