--- a/appIonic/www/templates/app.html
+++ b/appIonic/www/templates/app.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-calm">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -13,21 +13,25 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
+    <ion-header-bar class="bar-dark">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close href="#/app/newevent">
+        <ion-item class="item item-icon-left" menu-close href="#/app/newevent">
+          <i class="icon ion-android-add"></i>
           Create New Event
         </ion-item>
-        <ion-item menu-close href="#/app/events">
+        <ion-item class="item item-icon-left" menu-close href="#/app/events">
+          <i class="icon ion-android-calendar"></i>
           Events
         </ion-item>
-        <ion-item menu-close href="#/app/accounts">
+        <ion-item class="item item-icon-left" menu-close href="#/app/accounts">
+          <i class="icon ion-android-settings"></i>
           Account Info
         </ion-item>
-        <ion-item menu-close ng-click="logout()">
+        <ion-item class="item item-icon-left" menu-close ng-click="signout()">
+          <i class="icon ion-android-exit"></i>
           Logout
         </ion-item>
       </ion-list>
