--- a/appIonic/www/templates/signin.html
+++ b/appIonic/www/templates/signin.html
@@ -1,31 +1,27 @@
-<ion-modal-view>
-  <ion-header-bar>
+<ion-view>
+  <ion-header-bar class="bar-calm">
+    <h1 class="title">HeadCount</h1>
+  </ion-header-bar>
+  <ion-header-bar class="bar-subheader bar-dark">
     <h1 class="title">Login</h1>
   </ion-header-bar>
-  <ion-content>
+  <ion-content class="has-subheader">
     <form ng-submit="signin()" name="loginForm">
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Username</span>
           <input type="text" name="username" ng-model="user.username" ng-minlength="5" ng-maxlength="30" required>
         </label>        
-        <div ng-messages="loginForm.username.$error" ng-messages-include="templates/error-messages.html" 
-        class="form-errors" ng-if="loginForm.username.$touched">
-          <div class="form-error" ng-message="required">Please enter your Username</div>
-        </div>
         <label class="item item-input">
           <span class="input-label">Password</span>
           <input type="password" name="password" ng-model="user.password" ng-minlength="5" ng-maxlength="30" required>
         </label>
-        <div ng-messages="loginForm.password.$error" ng-messages-include="templates/error-messages.html" 
-        class="form-errors" ng-if="loginForm.username.$touched">
-          <div class="form-error" ng-message="required">Please enter your Password</div>
-        </div>
         <label class="item">
-          <button class="button button-block button-positive" type="submit" ng-disabled="loginForm.$invalid">Log in</button>
+          <button class="button button-block button-calm" type="submit">Log in</button>
         </label>
       </div>
     </form>
-    <a id="newAuth" href="#/signup">Don't have an account? <strong>Sign-Up</strong> ...</a>
-  </ion-content>
-</ion-modal-view>
+    <label class="item">
+      <button class="button button-block button-stable" id="newAuth" ng-click="signupNav()">Don't have an account? <strong>Sign-up</strong> ...</button>
+    </label>  </ion-content>
+</ion-view>
