--- a/appIonic/www/templates/signup.html
+++ b/appIonic/www/templates/signup.html
@@ -1,8 +1,11 @@
 <ion-view>
-  <ion-header-bar>
-    <h1 class="title">Sign Up</h1>
+  <ion-header-bar class="bar-calm">
+    <h1 class="title">HeadCount</h1>
   </ion-header-bar>
-  <ion-content>
+  <ion-header-bar class="bar-subheader bar-dark">
+    <h1 class="title">Login</h1>
+  </ion-header-bar>
+  <ion-content class="has-subheader">
     <form ng-submit="signup()" name="loginForm">
       <div class="list">
         <label class="item item-input">
@@ -22,10 +25,12 @@
           <!-- <div class="form-error" ng-message="required">Please enter your Password</div> -->
         </div>
         <label class="item">
-          <button class="button button-block button-positive" type="submit">Sign up</button>
+          <button class="button button-block button-stable" type="submit">Sign up</button>
         </label>
       </div>
     </form>
-    <a id="newAuth" href="#/signin">Already have an account? <strong>Sign-in</strong> ...</a>
+    <label class="item">
+      <button class="button button-block button-stable" id="newAuth" ng-click="signinNav()">Already have an account? <strong>Sign-in</strong> ...</button>
+    </label>
   </ion-content>
 </ion-view>
