--- a/appIonic/www/templates/accounts.html
+++ b/appIonic/www/templates/accounts.html
@@ -21,7 +21,7 @@
         </label>
         <label class="item item-input">
           <span class="input-label">Phone Number</span>
-          <input ng-model="telephone" type="tel" pattern="[\+]\d{2}[\(]\d{2}[\)]\d{4}[\-]\d{4}">
+          <input ng-model="telephone" type="tel" pattern="^(()?\d{3}())?(-|\s)?\d{3}(-|\s)?\d{4}$">
         </label>
         <label class="item item-input">
           <span class="input-label">Email (required)</span>
