--- a/appIonic/www/templates/signup.html
+++ b/appIonic/www/templates/signup.html
@@ -14,7 +14,7 @@
         </label>        
         <div ng-messages="loginForm.username.$error" ng-messages-include="templates/error-messages.html" 
         class="form-errors" ng-if="loginForm.username.$touched">
-          <!-- <div class="form-error" ng-message="required">Please enter your Username</div> -->
+          <div class="form-error" ng-message="required">Please enter your Username</div>
         </div>
         <label class="item item-input">
           <span class="input-label">Password</span>
@@ -22,7 +22,7 @@
         </label>
         <div ng-messages="loginForm.password.$error" ng-messages-include="templates/error-messages.html" 
         class="form-errors" ng-if="loginForm.username.$touched">
-          <!-- <div class="form-error" ng-message="required">Please enter your Password</div> -->
+          <div class="form-error" ng-message="required">Please enter your Password</div>
         </div>
         <label class="item">
           <button class="button button-block button-stable" type="submit">Sign up</button>
